@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.794 2008/11/07 14:52:51 mh Exp $
+# $Id: CHANGES,v 1.795 2008/11/09 23:14:06 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -39,7 +39,9 @@
     availabe in online repository packages.
 
 2.3.4 (2008/??/??)
- - (2008/11/07) Fixed bug# 2730 - Sending mails to M$ Exchange Server 2007
+ - (2008/11/10) Fixed bug# 3442 - HTML2Ascii is ignoring spaces on email
+    processing.
+ - (2008/11/07) Fixed bug# 2730 - Sending mails to MS Exchange Server 2007
     fails sometimes with "Bad file descriptor!".
  - (2008/11/01) Fixed bug# 3207 - Expanded articles in wrong order.
  - (2008/10/30) Fixed bug# 2071 - Dead link to online documentation in admin
